<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <WebView
        android:id="@+id/webcamView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </WebView>

    <Button
        android:id="@+id/button_sound_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="press_sound_alert"
        android:text="@string/button_sound_alert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_sound_pigeon" />

    <Button
        android:id="@+id/button_sound_appreciation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="press_sound_appreciation"
        android:text="@string/button_sound_appreciation"
        app:layout_constraintBottom_toTopOf="@+id/button_sound_alert"
        app:layout_constraintEnd_toStartOf="@+id/button_sound_yield" />

    <Button
        android:id="@+id/button_sound_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="press_sound_greeting"
        android:text="@string/button_sound_greeting"
        app:layout_constraintBottom_toTopOf="@+id/button_sound_appreciation"
        app:layout_constraintEnd_toStartOf="@+id/button_sound_apology" />

    <Button
        android:id="@+id/button_container_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="press_close"
        android:text="@string/button_container_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_sound_pigeon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="press_sound_pigeon"
        android:text="@string/button_sound_pigeon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_sound_yield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press_sound_yield"
        android:text="@string/button_sound_yield"
        app:layout_constraintBottom_toTopOf="@+id/button_sound_pigeon"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_sound_apology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press_sound_apology"
        android:text="@string/button_sound_apology"
        app:layout_constraintBottom_toTopOf="@+id/button_sound_yield"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_container_open"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="press_open"
        android:text="@string/button_container_open"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_container_close" />

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/joystickView_right"
        android:layout_width="167dp"
        android:layout_height="279dp"
        app:JV_backgroundColor="#AAAAAA"
        app:JV_borderColor="#717171"
        app:JV_borderWidth="8dp"
        app:JV_buttonColor="#505050"
        app:layout_constraintBottom_toTopOf="@+id/button_sound_apology"
        app:layout_constraintEnd_toEndOf="parent" />

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/joystickView_left"
        android:layout_width="169dp"
        android:layout_height="179dp"
        app:JV_backgroundColor="#808080"
        app:JV_borderColor="#707070"
        app:JV_borderWidth="8dp"
        app:JV_buttonColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button_sound_apology"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>